2003-03-14  Kevin Vandersloot <kfv101@psu.edu>

	* linux-proc.c: Get other network showing correctly. Fixes bug #91730.
	Patch by jlaska@us.ibm.com.

2003-03-12  Dennis Smit  <synap@area101.penguin.nl>

	* main.c, properties.c: Changed "Swap File" into "Swap Space"
	as a fix for bug #87934

2003-03-12  Kevin Vandersloot <kfv101@psu.edu>

	* load-graph.c: fix small sizing issues. Patch from <berberic@fmi.uni-passau.de>.
	Fixes bug #94745

2002-12-16  Kevin Vandersloot <kfv101@psu.edu>

	* Makefile.am: don't dist the .server.in file since
	it harcodes paths

2002-12-14  Fernando Herrera <fherrera@onirica.com>

	* GNOME_MultiLoadApplet_Factory.server.in.in: added bugzilla
	attributtes

2002-12-02  Christian Neumair  <chris@gnome-de.org>

	* properties.c: Made tabs HIG compliant (removed mnemonics).

2002-09-15  Juan Salaverria <rael@vectorstar.net>

	* GNOME_MultiloadApplet.xml: Added a separator in the
	menu. May fix bug #89864

2002-09-19  Mark McLoughlin  <mark@skynet.ie>

	* main.c: (about_cb), (start_procman_cb):
	* properties.c: (multiload_properties_cb):
	kill the HAVE_GTK_MULTIHEAD conditionals. We
	require gtk+ HEAD now.

2002-08-14  Mark McLoughlin  <mark@skynet.ie>

	* Makefile.am: link against libscreen-exec.la.

	* main.c: upd.

2002-07-24 John Fleck <jfleck@inkstain.net>

	removing extraneous OMF file:
	* multiload/docs/es/cpuload/cpuload_applet-C.omf
	Fixes http://bugzilla.gnome.org/show_bug.cgi?id=88992

2002-07-18  Kevin Vandersloot <kfv101@psu.edu>

        * main.c: use consistent error messages. Fixes bug #87905.
        Patch by Johan Dahlin

2002-07-18  Mark McLoughlin  <mark@skynet.ie>

	* Makefile.am: install applet into libexec.

	* GNOME_MultiLoadApplet_Factory.server.in: move .server.in to
	.server.in.in to allow for libexec dir substitution.

2002-07-11  Mark McLoughlin  <mark@skynet.ie>

	* Makefile.am: add egg-screen-exec.[ch] to the
	build.

	* main.c:
	(start_procman_cb): launch procman on the same
	screen as the applet.