@@ -1,3 +1,8 @@
+2003-04-07  Kevin Vandersloot <kfv101@psu.edu>
+
+	* main.c: Extensibility of nmber of graphs. Patch by James Strandboge. Fixes 
+	bug #90964
+
 2003-03-14  Kevin Vandersloot <kfv101@psu.edu>
 
 	* linux-proc.c: Get other network showing correctly. Fixes bug #91730.
